# AIGroupProject

./: .gitignore  README.md  app.py  pyproject.toml  pyrightconfig.json
aigroupproject/: __init__.py  big_table.py  brute_force.py  cli.py  lookup_table.py  main.py  nxn_sudoku.py  routes.py  sudoku.py  sudoku_solver.py  tests.py  utils.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: example.tsx  main.css  main.tsx
